--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><link rel="icon" href="data:">
 <title>さばペイ</title>
+<link rel="stylesheet" href="style.css">
 </head><body>
 <h1>さばペイ</h1>
 
@@ -168,42 +169,8 @@ if (sprikey) {
 
 <style>
 body {
-  font-family: sans-serif;
   text-align: center;
 }
-table {
-  display: inline-block;
-  border-collapse: collapse;
-}
-#main {
-  margin: 1em 0;
-  border-collapse: collapse;
-}
-td, th {
-  border: 1px solid black;
-  padding: .2em .8em;
-  font-size: 16px;
-}
-input, select {
-  padding: .2em;
-  margin: .1em;
-  font-size: 14px;
-}
-button {
-  font-size: 16px;
-  padding: .2em;
-}
-input {
-  font-size: 150%;
-}
-a {
-  color: gray !important;
-}
-.min {
-  font-size: 13px;
-}
-#btnclear {
-  margin: .5em;
-}
 </style>
+
 </body><html>
