add small point

--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,8 @@
 <h2>新規発行</h2>
 タイトル: <input id=intitle value="さばペイ"><br>
 ポイント: <select id=seladd>
+  <option value=100>   100Pt</option>
+  <option value=500>   500Pt</option>
   <option value=1000> 1,000Pt</option>
   <option value=2000> 2,000Pt</option>
   <option value=3000> 3,000Pt</option>
