--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <tr><th>ポイント残高</th><td><span id=divremain></span>Pt</td></tr></tr>
 <tr><th>有効期限</th><td><span id=divlimit></span></td></tr></tr>
 <tr><th>発行日時</th><td><span id=divissue></span></td></tr></tr>
-<tr><th>使用ポイント</th><td><input id=inuse></td></tr></tr>
+<tr><th>使用ポイント</th><td><input type=number id=inuse></td></tr></tr>
 <tr><th>追加ポイント</th><td><select id=seladd>
   <option value=0>-</option>
   <option value=1000> 1,000Pt</option>
@@ -27,7 +27,7 @@
   <option value=10000>10,000Pt</option>
 </select></td></tr></tr>
 <tr><th>有効期限</th><td><input id=invalid type=date></td></tr></tr>
-</table>
+</table><br>
 <button id=btnuse>反映する</button><br>
 <br>
 → <a href=admin.html>さばペイ管理画面</a><br>
